# web-scraper-nabidek-pronajmu

./: .gitignore  Makefile  README.md  pyproject.toml
src/: config.py  main.py  scrapers_manager.py
src/nemo_scrape/: config.py  main.py  offers_storage.py  scrapers_manager.py
src/nemo_scrape/scrapers/: rental_offer.py  scraper_base.py  scraper_bezrealitky.py  scraper_euro_bydleni.py  scraper_idnes_reality.py  scraper_realcity.py  scraper_realingo.py  scraper_remax.py  scraper_sreality.py  scraper_ulov_domov.py
src/scrapers/: rental_offer.py  scraper_base.py  scraper_bezrealitky.py  scraper_euro_bydleni.py  scraper_idnes_reality.py  scraper_realcity.py  scraper_realingo.py  scraper_remax.py  scraper_sreality.py  scraper_ulov_domov.py
